--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -182,7 +182,7 @@
     display: flex;
     flex-direction: column;
     gap: 80px;
-    margin-bottom: 48px;
+    padding-bottom: 48px;
 }
 
 .projectDescription {
@@ -193,7 +193,7 @@
 
 .projectPage {
     animation: showDown 1.5s ease-in-out;
-    margin-bottom: 48px;
+    padding-bottom: 48px;
 }
 .projectImage {
     margin-bottom: 25px;
