--- a/src/components/ProjectPreview/ProjectPreview.module.css
+++ b/src/components/ProjectPreview/ProjectPreview.module.css
@@ -115,6 +115,21 @@
     color: white;
 }
 
+.more {
+    font-family: SFPro, serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: #F086CB;
+    text-align: end;
+    margin: 0;
+    padding: 10px 0 0 0;
+    cursor: pointer;
+}
+
+.moreInvert {
+    text-align: start;
+}
+
 .projectTags {
     display: flex;
     flex-direction: row;
