--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -192,7 +192,7 @@
 }
 
 .projectPage {
-    animation: showDown 1.5s ease-in-out;
+    animation: showDown 1.5s cubic-bezier(.25,.75,.5,1.25) forwards;
     padding-bottom: 48px;
 }
 .projectImage {
